k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polybot-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - roman-k8s-bot-dev.devops-int-college.com
    - roman-k8s-bot.devops-int-college.com
    secretName: romantls
  rules:
  - host: roman-k8s-bot.devops-int-college.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: polybot-svc
            port:
